# CodePilgrim-AI-Tutor

./: .gitignore  LICENSE  README.md  docker-compose.yml  start-enhanced.bat  start.bat  stop.bat
agent/: agent.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  sandbox.Dockerfile  test_api.py  test_brute.py  test_captcha_api.py  test_cors.py  test_debug.py  test_e2e.py  test_frontend.py  test_frontend_sim.py  test_full_flow.py  test_http_flow.py  test_mapping.py  test_verify.py
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/algorithms/: __init__.py
backend/app/algorithms/bkt/: __init__.py  tracker.py
backend/app/algorithms/cognitive_load/: __init__.py  regulator.py
backend/app/algorithms/ercf/: __init__.py  controller.py
backend/app/algorithms/spaced_repetition/: __init__.py  scheduler.py
backend/app/api/v1/: __init__.py  api_config.py  auth.py  courses.py  knowledge.py  learning.py  ws.py
backend/app/core/: cache.py  config.py  crypto.py  deps.py  exceptions.py  logging.py  middleware.py  pagination.py  security.py
backend/app/db/: seed.py  seed_courses.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: api_config.py  course.py  knowledge.py  learning.py  user.py
backend/app/services/: ai_tutor.py  captcha_generator.py  learning_path.py  sandbox.py  security.py
backend/tests/: test_bkt.py  test_cognitive_load.py  test_ercf.py  test_spaced_repetition.py
docs/: CodePilgrim编程伴学系统开发方案.md
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
(+24 files in other folders)
